--- a/index.html
+++ b/index.html
@@ -26,24 +26,34 @@
                     <h1>Father Figure</h1>
                 </div>
                 <div class="col-sm-6">
-                    <nav class="nav">
+                    <div class="dropdown d-lg-none d-xl-none d-md-none">
+                        <button id="my-dropdown" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
+                        <div class="dropdown-menu" aria-labelledby="my-dropdown">
+                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="about.html">About</a>
+                            <a class="dropdown-item" href="family.html">Family</a>
+                            <a class="dropdown-item" href="blog.html">Blog</a>
+                            <a class="dropdown-item" href="contact.html">Contact</a>
+                        </div>
+                    </div>
+                    <nav class="nav" id="navmobile">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Family</a>
+                            <a class="nav-link" href="family.html">Family</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </nav>
-                  </div>
+                </div>
             </div>
         </div>
     </header>
