--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <link rel="stylesheet" href="../Blog/Resources/CSS/index.css">
+    <link rel="stylesheet" href="../Father Figure/Resources/CSS/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pattaya&display=swap" rel="stylesheet">
@@ -22,10 +22,10 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-xs-6" id="menu">
                     <h1>Father Figure</h1>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6 justify-content-end" id="menu">
                     <div class="dropdown d-lg-none d-xl-none d-md-none">
                         <button id="my-dropdown" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
                         <div class="dropdown-menu" aria-labelledby="my-dropdown">
