fixed wrapping and dropdown in header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Father Figure</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,12 +18,12 @@
     <!--Header section-->
 
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-6" id="menu">
-                    <h1>Father Figure</h1>
+                <div class="col-sm-6" id="menu">
+                    <h1 class="text-nowrap">Father Figure</h1>
                 </div>
-                <div class="col-xs-6 justify-content-end" id="menu">
+                <div class="col-sm-6 d-flex justify-content-end" id="menu">
                     <div class="dropdown d-lg-none d-xl-none d-md-none">
                         <button id="my-dropdown" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
                         <div class="dropdown-menu" aria-labelledby="my-dropdown">
@@ -34,7 +34,7 @@
                             <a class="dropdown-item" href="contact.html">Contact</a>
                         </div>
                     </div>
-                    <nav class="nav" id="navmobile">
+                    <nav class="nav d-flex flex-nowrap" id="navmobile">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
