--- a/index.html
+++ b/index.html
@@ -55,6 +55,37 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>Why I decided to Blog</h3>
+                    <p>Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
+                         I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health. </p>
+                </div>
+                <div class="col">
+                    <div class="row d-block">
+                        <h3>Daily Activities</h3>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="row d-block">
+                        <h3>Daily Snacks</h3>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>    
+                </div>
+            </div>
+        </div>
+    </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
