just went to work

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                             <a class="dropdown-item" href="about.html">About</a>
                             <a class="dropdown-item" href="family.html">Family</a>
                             <a class="dropdown-item" href="blog.html">Blog</a>
-                            <a class="dropdown-item" href="contact.html">Contact</a>
                         </div>
                     </div>
                     <nav class="nav d-flex flex-nowrap" id="navmobile">
@@ -47,9 +46,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html">Blog</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
+                        
                     </nav>
                 </div>
             </div>
@@ -57,32 +54,55 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col">
-                    <h3>Why I decided to Blog</h3>
-                    <p>Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
-                         I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health. </p>
+                <div class="col-sm-12 col-md-8" id="blog">
+                    <h3 class="text-center" id="center">Blog</h3>
+                    <p class="text-center" id="center">Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
+                         I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health.</p>
                 </div>
                 <div class="col">
-                    <div class="row d-block">
-                        <h3>Daily Activities</h3>
+                    <div class="row d-flex justify-content-center" id="activities">
+                        <h3 class="text-center" id="center">Daily Activities</h3>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Sports</li>
+                            <li>Puzzles</li>
+                            <li>Building/Legos</li>
+                            <li>Art and Crafts</li>
                         </ul>
                     </div>
-                    <div class="row d-block">
-                        <h3>Daily Snacks</h3>
+                    <div class="row d-flex justify-content-center" id="healthysnacks">
+                        <h3 class="text-center" id="center">Healthy Snacks</h3>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Strawberries</li>
+                            <li>Blueberries</li>
+                            <li>oats</li>
                         </ul>
                     </div>    
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 d-block justify-content-center" id="parks">
+                <h3 class="text-center" id="center">Local Parks</h3>
+                <ul>
+                    <li>Paseo Vist</li>
+                    <li>Sunset Park</li>
+                    <li>Mission Park</li>
+                </ul>
+
+            </div>
+            <div class="col" id="dadtime">
+                <h3 class="text-center" id="center">Dad Time</h3>
+                <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
+        
+
+            </div>
+            <div class="col" id="whyblog">
+                <h3 class="text-center" id="center">Why I decided to Blog</h3>
+                <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a little older and their engery as well as their need for attention
+                    is continuing to grow. </p>
+
             </div>
         </div>
     </main>
