changed text color to white

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 d-block justify-content-center" id="parks">
-                <h3 class="text-center" id="center">Local Parks</h3>
+            <div class="col" id="parks">
+                <h3 class="text-center" id="center"> Parks</h3>
                 <ul>
                     <li>Paseo Vist</li>
                     <li>Sunset Park</li>
