worked on spacing between col and row

--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col" id="parks">
+        <div class="row" id="secondrow">
+            <div class="col-sm-4" id="parks">
                 <h3 class="text-center" id="center"> Parks</h3>
-                <ul>
+                <ul class="text-center" id="licenter">
                     <li>Paseo Vist</li>
                     <li>Sunset Park</li>
                     <li>Mission Park</li>
                 </ul>
 
             </div>
-            <div class="col" id="dadtime">
+            <div class="col-sm-4" id="dadtime">
                 <h3 class="text-center" id="center">Dad Time</h3>
                 <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
         
@@ -104,6 +104,10 @@
                     is continuing to grow. </p>
 
             </div>
+        </div>
+        <div>
+            <img id="img" src="../Father Figure/Resources/Images/IMG_0337.jpeg" alt="kids at park">
+            
         </div>
     </main>
     <!-- Optional JavaScript -->
