changed park lists

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <div class="col-sm-4" id="parks">
                 <h3 class="text-center" id="center"> Parks</h3>
                 <ul class="text-center" id="licenter">
-                    <li>Paseo Vist</li>
-                    <li>Sunset Park</li>
-                    <li>Mission Park</li>
+                    <li>Shade!!!!</li>
+                    <li>Splash Pad</li>
+                    <li>Jungle Gym</li>
                 </ul>
 
             </div>
