changed path for img

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
         <div>
-            <img id="img" src="../Father Figure/Resources/Images/IMG_0337.jpeg" alt="kids at park">
+            <img id="img" src="../Father-Figure/Resources/Images/IMG_0337.jpeg" alt="kids at park">
             
         </div>
     </main>
