made daily activities div collapsable

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
             </div>
         </div>
     </header>
-
+        <!--main section-->
     <main>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12 col-md-8" id="blog">
+            <div class="row d-flex justify-content-center">
+                <div class="col-sm-11 col-md-8" id="blog">
                     <h3 class="text-center" id="center">Blog</h3>
                     <p class="text-center" id="center">Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
                          I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health.</p>
                 </div>
                 <div class="col">
                     <div class="row d-flex justify-content-center" id="activities">
-                        <h3 class="text-center" id="center">Daily Activities</h3>
-                        <ul>
+                        <h3  style="font-size: larger;" class="text-center" id="center"><button class="btn btn-link" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
+                        <ul class="collapse" id="daily-activities">
                             <li>Sports</li>
                             <li>Puzzles</li>
                             <li>Building/Legos</li>
@@ -84,7 +84,7 @@
         </div>
         <div class="row" id="secondrow">
             <div class="col-sm-4" id="parks">
-                <h3 class="text-center" id="center"> Parks</h3>
+                <h3 class="text-center" id="center"> Parks Details</h3>
                 <ul class="text-center" id="licenter">
                     <li>Shade!!!!</li>
                     <li>Splash Pad</li>
