--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col">
                     <div class="row d-flex justify-content-center" id="activities">
-                        <h3  style="font-size: larger;" class="text-center" id="center"><button class="btn btn-link" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
+                        <h3  class="text-center" id="center"><button class="btn btn-link" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
                         <ul class="collapse" id="daily-activities">
                             <li>Sports</li>
                             <li>Puzzles</li>
@@ -72,27 +72,27 @@
                         </ul>
                     </div>
                     <div class="row d-flex justify-content-center" id="healthysnacks">
-                        <h3 class="text-center" id="center">Healthy Snacks</h3>
-                        <ul>
+                        <h3 class="text-center" id="center"><button class="btn btn-link" aria-expanded="flase" area-controls="Healthysnacks" data-toggle="collapse" data-target="#Healthysnacks">Healthy Snacks</button></h3>
+                        <ul class="collapse" id="Healthysnacks">
                             <li>Strawberries</li>
                             <li>Blueberries</li>
                             <li>oats</li>
                         </ul>
-                    </div>    
+                    </div>  
+                    <div class="row d-flex justify-content-center" id="healthysnacks">
+                        <h3 class="text-center" id="center"><button class="btn btn-link" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#Parkdetails">Parks Details</button></h3>
+                        <ul class="collapse" id="Parkdetails">
+                            <li>Shade</li>
+                            <li>Splash Pad</li>
+                            <li>Jungle Gym</li>
+                            <li>Swings</li>
+                        </ul>
+                    </div>  
                 </div>
             </div>
         </div>
-        <div class="row" id="secondrow">
-            <div class="col-sm-4" id="parks">
-                <h3 class="text-center" id="center"> Parks Details</h3>
-                <ul class="text-center" id="licenter">
-                    <li>Shade!!!!</li>
-                    <li>Splash Pad</li>
-                    <li>Jungle Gym</li>
-                </ul>
-
-            </div>
-            <div class="col-sm-4" id="dadtime">
+        <div class="row">
+            <div class="col-sm-6" id="dadtime">
                 <h3 class="text-center" id="center">Dad Time</h3>
                 <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
         
