--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <p class="text-center" id="center">Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
                          I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health.</p>
                 </div>
-                <div class="col">
+                <div class="col" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="activities">
                         <h3  class="text-center" id="center"><button class="btn btn-link" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
                         <ul class="collapse" id="daily-activities">
@@ -79,7 +79,7 @@
                             <li>oats</li>
                         </ul>
                     </div>  
-                    <div class="row d-flex justify-content-center" id="healthysnacks">
+                    <div class="row d-flex justify-content-center" id="parks">
                         <h3 class="text-center" id="center"><button class="btn btn-link" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#Parkdetails">Parks Details</button></h3>
                         <ul class="collapse" id="Parkdetails">
                             <li>Shade</li>
@@ -91,18 +91,17 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-6" id="dadtime">
-                <h3 class="text-center" id="center">Dad Time</h3>
-                <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
-        
-
-            </div>
-            <div class="col" id="whyblog">
-                <h3 class="text-center" id="center">Why I decided to Blog</h3>
-                <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a little older and their engery as well as their need for attention
+        <div class="container-fluid">
+            <div class="row" id="secondrow">
+                <div class="col-sm-6" id="dadtime">
+                    <h3 class="text-center" id="center">Dad Time</h3>
+                    <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
+                </div>
+                <div class="col" id="whyblog">
+                    <h3 class="text-center" id="center">Why I decided to Blog</h3>
+                    <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a little older and their engery as well as their need for attention
                     is continuing to grow. </p>
-
+                </div>    
             </div>
         </div>
         <div>
