learning nav-bar

--- a/index.html
+++ b/index.html
@@ -18,39 +18,29 @@
     <!--Header section-->
 
     <header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6" id="menu">
-                    <h1 class="text-nowrap">Father Figure</h1>
-                </div>
-                <div class="col-sm-6 d-flex justify-content-end" id="menu">
-                    <div class="dropdown d-lg-none d-xl-none d-md-none">
-                        <button id="my-dropdown" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
-                        <div class="dropdown-menu" aria-labelledby="my-dropdown">
-                            <a class="dropdown-item" href="index.html">Home</a>
-                            <a class="dropdown-item" href="about.html">About</a>
-                            <a class="dropdown-item" href="family.html">Family</a>
-                            <a class="dropdown-item" href="blog.html">Blog</a>
-                        </div>
-                    </div>
-                    <nav class="nav d-flex flex-nowrap" id="navmobile">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="family.html">Family</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="blog.html">Blog</a>
-                        </li>
-                        
-                    </nav>
-                </div>
+        <nav class="navbar-light bg-light navbar navbar-expand-sm">
+            <a class="navbar-brand">Father Figure</a>
+            <button class="navbar-toggle" type="button" data-toggle="colllapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
+                <span class="navbar-toggle-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="navbar-nav">
+                        <a class="nav-item" href="about.html">About Me</a>
+                    </li>
+                    <li class="navbar-nav">
+                        <a class="nav-item" href="blog.html">Blog</a>
+                    </li>
+                    <li class="navbar-nav">
+                        <a class="nav-item" href="family.html">Family</a>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
+        
     </header>
         <!--main section-->
     <main>
