changed link to header in navbar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <a class="navbar-brand">Father Figure</a>
-            <button class="navbar-toggle" type="button" data-toggle="colllapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
+            <span class="navbar-brand mb-0 h1">Father Figure</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggle-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
