--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
             <span class="navbar-brand mb-0 h1">Father Figure</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
-                <span class="navbar-toggle-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbar">
+            <div class="collapse navbar-collapse justify-content-end" id="navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="navbar-nav">
-                        <a class="nav-item" href="about.html">About Me</a>
+                    <li class="navbar-item">
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
-                    <li class="navbar-nav">
-                        <a class="nav-item" href="blog.html">Blog</a>
+                    <li class="navbar-item">
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
-                    <li class="navbar-nav">
-                        <a class="nav-item" href="family.html">Family</a>
+                    <li class="navbar-item">
+                        <a class="nav-link" href="family.html">Family</a>
                     </li>
                 </ul>
             </div>
