--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>    
             </div>
         </div>
-        <div>
+        <div class="container-fluid">
             <img id="img" src="../Father-Figure/Resources/Images/IMG_0337.jpeg" alt="kids at park">
             
         </div>
