--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
     </header>
         <!--main section-->
-    <main>
+    <main id="mainhome">
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
                 <div class="col-sm-11 col-md-8" id="blog">
