added content to family page

--- a/family.html
+++ b/family.html
@@ -37,9 +37,42 @@
         </nav>
     </header>
     <!--Body section-->
+    <!--jumbotron section-->
     <main id="mainfamily">
         <div class="jumbotron" id="familyheader">
             <h1 class="display-4" id="familytitle">The Littles</h1>   
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img  id="familyimg" src="../Father-Figure/Resources/Images/ROQJ7611.jpeg" alt="pic of dad">
+                    <h4 class="text-center" id="familydescrip">Dad</h4>
+                    <p class="text-center">I'm in shape but complaine about being fat know everything type of dude.
+                    </p>
+                </div>
+                <div class="col ">
+                    <img id="familyimg" src="../Father-Figure/Resources/Images/Sid.jpeg" alt="pic or Mom">
+                    <h4 class="text-center" id="familydescrip">Mom</h4>
+                    <p class="text-center">The most indecisive but I know what I want addicted to coffee type of Gal.  </p>
+                </div>
+            </div>
+            <div class="row" id="family2ndrow">
+                <div class="col">
+                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/Asepn.jpeg" alt="pic of Aspen">
+                    <h4 class="text-center" id="familydescrip">Aspen</h4>
+                    <p class="text-center">Im not that sick but too sick to clean hungry but not for that type of dude.</p>
+                </div>
+                <div class="col">
+                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/Autumn.JPG" alt="pic of Autumn">
+                    <h4 class="text-center" id="familydescrip">Autumn</h4>
+                    <p class="text-center">I want to go to the park but im shy wheres my glasses type of Gal.</p>
+                </div>
+                <div class="col">
+                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/AJ.JPG" alt="pic of AJ">
+                    <h4 class="text-center" id="familydescrip">AJ</h4>
+                    <p class="text-center">I just want my way fake cry i'm to tired to eat type of Gal.</p>
+                </div>
+            </div>
         </div>
     </main>  
     <!-- Optional JavaScript -->
