messing with borders

--- a/index.html
+++ b/index.html
@@ -81,19 +81,6 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
-            <div class="row" id="secondrow">
-                <div class="col-sm-6" id="dadtime">
-                    <h3 class="text-center" id="center">Dad Time</h3>
-                    <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
-                </div>
-                <div class="col" id="whyblog">
-                    <h3 class="text-center" id="center">Why I decided to Blog</h3>
-                    <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a little older and their engery as well as their need for attention
-                     </p>
-                </div>    
-            </div>
-        </div>
         <!--carousel section-->
 
         <div id="my-carousel" class="carousel slide" data-ride="carousel">
@@ -121,8 +108,29 @@
                 <a class="carousel-control-next" href="#my-carousel" data-slide="next" role="button">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
+                </a>    
             </div>
         </div>
+
+        <div class="container-fluid">
+            <div class="row" id="secondrow">
+                <div class="col-sm-6" id="dadtime">
+                    <h3 class="text-center" id="center">Dad Time</h3>
+                    <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
+                </div>
+                <div class="col" id="whyblog">
+                    <h3 class="text-center" id="center">Why I decided to Blog</h3>
+                    <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a little older and their engery as well as their need for attention
+                     </p>
+                </div>    
+            </div>
+        </div>
+
+        <!--footer section-->
+        <footer>
+            
+        </footer>
+        
     </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
