--- a/family.html
+++ b/family.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
   </head>
@@ -65,7 +66,7 @@
                 <div class="col">
                     <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/Autumn.JPG" alt="pic of Autumn">
                     <h4 class="text-center" id="familydescrip">Autumn</h4>
-                    <p class="text-center">I want to go to the park but im shy wheres my glasses type of Gal.</p>
+                    <p class="text-center">I want to go to the park to meet friends but im shy wheres my glasses type of Gal.</p>
                 </div>
                 <div class="col">
                     <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/AJ.JPG" alt="pic of AJ">
@@ -74,6 +75,24 @@
                 </div>
             </div>
         </div>
+
+         <!--footer section-->
+         <footer>
+            <div class="container-fluid bg-light">
+                
+            </div>
+                <div class="row">
+                    <div class="col text-left">
+                        <p>&copy; Father Figure</p>
+                    </div>
+                    <div class="col text-right">
+                            <a href="https://www.facebook.com/andrew.little.98" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a>
+                            <a href="https://www.instagram.com/alittle420/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
+                            <a href="https://www.youtube.com/channel/UCPqERvKUFsPquBI0sU817BQ" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
