fixed footer in about page

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <img src="../Father-Figure/Resources/Images/pic of me.jpeg" alt="pic of me" id="aboutmeimg">
 
                 </div>
-                
+            </div>   
             <div class="row" id="aboutmepara">
                 
                 <div class="w-50 mx-auto">
