--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                         lowered to the ground. I would run back and fourth trying to get this kite to get up and as soon as I thought it was up and flying….. Slowly it would just fall back down to earth.  Slowly one by one my kids 
                         gave up on me. Dad can we just go play at the park, Dad its hot, Dad can we go home! They trickled away  like the sweat running down my face. I couldnt give up. There was no way I came to the park twice and was 
                         punked by mother nature. Back and fourth I ran from left to right East to West. Nothing…. I lay there defeated out of breath dripping sweat. I took a deep breath tucked my pride in my pocket…. Lets go home and get pizza. 
-                        As I sit at home with a cold beer in my hand and my feet in the water. At least I got cardio in.gevdbgbbhncdjxjnhjhú3    x Till we meet again mother nature. 
+                        As I sit at home with a cold beer in my hand and my feet in the water. Till we meet agian mother nature thanks for the cardio!
                      </p>
                 </div>
                 <div class="col">
