added some sample text to homepage blog

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         <div class="container-fluid">
             <div class="row d-flex justify-content-center">
                 <div class="col-sm-11 col-md-8" id="blog">
-                    <h3 class="text-center" id="center">Blog</h3>
-                    <p class="text-center" id="center">Over the past few years I have getting deeper into the #dadlife as they would say. My children are now getting oldeI have never been much of a writter or Journalists.
-                         I've read in many places that talking about  your emotions or feeling can greatly improve your your emotinal and mental health.</p>
+                    <h2 class="text-center" id="center">Blog</h2>
+                    <p class="text-center" id="center">The other day I decided to purchase a kite off of Amazon. I thought, I loved flying kites as a kid and how cool would it be to teach my kids how to fly one. It’s been windy for the past 
+                        month maybe 2. Every day the wind howls my kids toys in the back yard scatter across the backyard. The cushions and some of the furniture on my patio fly in the air some in the street on the other backside 
+                        wall. I decided to make the best of a windy situation and buy the kite. A couple days later I get the package.  Kids see that its here and they are super excited (Me too!!). Its been
+                        quite a while since I’ve flown a kite literally close to 20 years.😳😳 YIKES!  So the day finally comes its been windy every day. How could it possibly not be the day I told the kids we would go…………WELL……..</p>
                 </div>
                 <div class="col" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="activities">
