changed family page background

--- a/family.html
+++ b/family.html
@@ -43,39 +43,58 @@
         <div class="jumbotron" id="familyheader">
             <h1 class="display-4" id="familytitle">The Littles</h1>   
         </div>
-        <div class="container">
+        <!--main section-->
+        <div class="container text-light">
             <div class="row">
                 <div class="col">
-                    <img  id="familyimg" src="../Father-Figure/Resources/Images/ROQJ7611.jpeg" alt="pic of dad">
-                    <h4 class="text-center" id="familydescrip">Dad</h4>
-                    <p class="text-center">I'm in shape but complaine about being fat know everything type of dude.
-                    </p>
+                    <div class="card shadow p-3 mb-5 bg-black rounded" >
+                        <img src="../Father-Figure/Resources/Images/ROQJ7611.jpeg" alt="pic of Andy" class="card-img-top">
+                    </div>
+                    <div class="card-body text-center">
+                        <h5>Dad</h5>
+                        <p class="card-text">The I'm fat but workout every day always right kinda guy.</p>
+                    </div>
                 </div>
-                <div class="col ">
-                    <img id="familyimg" src="../Father-Figure/Resources/Images/Sid.jpeg" alt="pic or Mom">
-                    <h4 class="text-center" id="familydescrip">Mom</h4>
-                    <p class="text-center">The most indecisive but I know what I want addicted to coffee type of Gal.  </p>
+                <div class="col">
+                    <div class="card shadow p-3 mb-5 bg-black rounded">
+                        <img src="../Father-Figure/Resources/Images/Sid.jpeg" alt="pic of Sid" class="card-img-top">
+                    </div>
+                    <div class="card-body text-center">
+                        <h5>Mom</h5>
+                        <p class="card-text">The most indecisive I know what I want addicted to coffee type of gal.</p>
+                    </div>
                 </div>
             </div>
-            <div class="row" id="family2ndrow">
+            <div class="row ">
                 <div class="col">
-                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/Asepn.jpeg" alt="pic of Aspen">
-                    <h4 class="text-center" id="familydescrip">Aspen</h4>
-                    <p class="text-center">Im not that sick but too sick to clean hungry but not for that type of dude.</p>
+                    <div class="card shadow p-3 mb-5 bg-black ">
+                        <img src="../Father-Figure/Resources/Images/Asepn.jpeg" alt="pic of Aspen" class="card-img-top" style="height: 350px;">
+                    </div>
+                    <div class="card-body text-center">
+                        <h5>Aspen</h5>
+                        <p class="card-text">The I want to play but I am too sick to clean my room but I love you type of dude.</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/Autumn.JPG" alt="pic of Autumn">
-                    <h4 class="text-center" id="familydescrip">Autumn</h4>
-                    <p class="text-center">I want to go to the park to meet friends but im shy wheres my glasses type of Gal.</p>
+                    <div class="card shadow p-3 mb-5 bg-black ">
+                        <img src="../Father-Figure/Resources/Images/Autumn.JPG" alt="pic of Autumn" class="card-img-top" style="height: 350px;">
+                    </div>
+                    <div class="card-body text-center">
+                        <h5>Autumn</h5>
+                        <p class="card-text">I want a snack but too full to eat carrots where is my glasses type of gal.</p>
+                    </div>
                 </div>
                 <div class="col">
-                    <img id="familyimg2ndrow" src="../Father-Figure/Resources/Images/AJ.JPG" alt="pic of AJ">
-                    <h4 class="text-center" id="familydescrip">AJ</h4>
-                    <p class="text-center">I just want my way fake cry i'm to tired to eat type of Gal.</p>
+                    <div class="card shadow p-3 mb-5 bg-black ">
+                        <img src="../Father-Figure/Resources/Images/AJ.JPG" alt="pic of AJ" class="card-img-top" style="height: 350px;">
+                    </div>
+                    <div class="card-body text-center">
+                        <h5>A.J.</h5>
+                        <p class="card-text">The I'm bad but try to cry to get out of it type of gal.</p>
+                    </div>
                 </div>
             </div>
         </div>
-
          <!--footer section-->
          <footer>
             <div class="container-fluid bg-light">
