--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="container-fluid">
             <div class="row" id="secondrow">
-                <div class="col-sm-6" id="dadtime">
+                <div class="col-md-6" id="dadtime">
                     <h3 class="text-center" id="center">Dad Time</h3>
                     <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
                 </div>
