fixed size of carousel

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!--carousel section-->
 
         <div id="my-carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner" id="mycarouselimg">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_0242.jpeg" alt="Kids at Red Rock Pool">
                 </div>
