changed margin on #whyblog

--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-sm-8" id="theblog">
                     <H3 class="text-center">The Kite Incident</H3>
-                    <p class="text-center">The other day I decided to purchase a kite off of Amazon. I thought, I loved flying kites as a kid and how cool would it be to teach my kids how to fly one. It’s been windy for the past 
+                    <p class="text-center" id="blogtext">The other day I decided to purchase a kite off of Amazon. I thought, I loved flying kites as a kid and how cool would it be to teach my kids how to fly one. It’s been windy for the past 
                         month maybe 2. Every day the wind howls my kids toys in the back yard scatter across the backyard. The cushions and some of the furniture on my patio fly in the air some in the street on the other backside 
                         wall. I decided to make the best of a windy situation and buy the kite. A couple days later I get the package.  Kids see that its here and they are super excited (Me too!!). Its been
                         quite a while since I’ve flown a kite literally close to 20 years.😳😳 YIKES!  So the day finally comes its been windy every day. How could it possibly not be the day I told the kids we would go…………WELL……..
@@ -58,9 +58,9 @@
                         But the wind, you know  good old mother nature had other plans. It just stopped. I mean nothing. It was sad! The kids cried, I cried so we played on the jungle gym and went about our day. 
 
                             2 Weeks later
+                            <button class="btn btn-link" aria-expanded="false" area-controls="blogtext" data-toggle="collapse" data-target="#blogtext" id="linkgone">Read More....</button>
 
-
-                        So the wind just left. I mean super windy every day for a month or so I finally get the kite we get it out there and nothing. Mother Nature said I need a break iv been blowing things all month… SLUT.
+                        <p class="collapse" id="blogtext">So the wind just left. I mean super windy every day for a month or so I finally get the kite we get it out there and nothing. Mother Nature said I need a break iv been blowing things all month… SLUT.
                         Anyways its about 2 weeks later its HOT now. I get the kids all geared up to play in there little pool in the back yard. The sounds burning hot waters freezing cold. I start putting the canopy up to block
                         the sound and its trying to blow away. I like What the Fuck yo. Then Aspen goes “Man it’s windy enough for the kite”. Im like Lets ride. They of course were bolting for the door. So we got ready wind still
                         blowing and all. As soon as we got to the park. Dead. It just stopped, then out of nowhere it would gust up like it was teasing me. The kite would start to go up  and then just stall. And mock me as it slows
