changed font size on Dadtime and Whyblog

--- a/index.html
+++ b/index.html
@@ -120,11 +120,13 @@
             <div class="row" id="secondrow">
                 <div class="col-md-6" id="dadtime">
                     <h3 class="text-center" id="center">Dad Time</h3>
-                    <p class="text-center" id="center">Here is a short list I like to do on a daily basis to give Dad some alone time while not distincing himself from the kids.</p>
+                    <p class="text-center w-100" id="dadtimeP">Things I do to keep my sanity.  Sometimes Parents need a little time to center them selves! Here i'll be sharing some things i do 
+                        to keep my slef "Centered". 
+                    </p>
                 </div>
                 <div class="col" id="whyblog">
                     <h3 class="text-center" id="center">Why I decided to Blog</h3>
-                    <p class="text-center" id="center">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a litt </p>
+                    <p class="text-center w-100" id="dadtimeP">Over the past few years I have been getting deeper into the Dadlife as they would say. My children are now getting a litt </p>
                 </div>    
             </div>
         </div>
