addedfontsizetohealthy snackschangedIDon activitie

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         </ul>
                     </div>  
                     <div class="row d-flex justify-content-center" id="parks">
-                        <h3 class="text-center display-2 w-100"><button class="btn btn-link text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#Parkdetails">Parks Details</button></h3>
-                        <ul class="collapse" id="Parkdetails">
+                        <h3 class="text-center display-2 w-100"><button class="btn btn-link text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#mainLI">Parks Details</button></h3>
+                        <ul class="collapse" id="mainLI">
                             <li>Shade</li>
                             <li>Splash Pad</li>
                             <li>Jungle Gym</li>
