--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                 <div class="col-md-6" id="dadtime">
                     <h3 class="text-center" id="center">Dad Time</h3>
                     <p class="text-center w-100" id="dadtimeP">Things I do to keep my sanity.  Sometimes Parents need a little time to center them selves! Here i'll be sharing some things i do 
-                        to keep my slef "Centered". 
+                        to keep my slef "Centered". <a href="blog.html">Read More...</a>
                     </p>
+                    
                 </div>
                 <div class="col" id="whyblog">
                     <h3 class="text-center" id="center">Why I decided to Blog</h3>
