changed button size on activities link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="activities">
-                        <h3  class="text-center display-2 w-100"><button class="btn btn-link text-white" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
+                        <h3  class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Daily Activities</button></h3>
                         <ul class="collapse" id="daily-activities">
                             <li>Sports</li>
                             <li>Puzzles</li>
@@ -66,7 +66,7 @@
                         </ul>
                     </div>
                     <div class="row d-flex justify-content-center" id="healthysnacks">
-                        <h3 class="text-center display-2 w-100" ><button class="btn btn-link text-white" aria-expanded="flase" area-controls="Healthysnacks" data-toggle="collapse" data-target="#Healthysnacks">Healthy Snacks</button></h3>
+                        <h3 class="text-center display-2 w-100" ><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="Healthysnacks" data-toggle="collapse" data-target="#Healthysnacks">Healthy Snacks</button></h3>
                         <ul class="collapse" id="Healthysnacks">
                             <li>Strawberries</li>
                             <li>Blueberries</li>
@@ -74,7 +74,7 @@
                         </ul>
                     </div>  
                     <div class="row d-flex justify-content-center" id="parks">
-                        <h3 class="text-center display-2 w-100"><button class="btn btn-link text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#mainLI">Parks Details</button></h3>
+                        <h2 class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#mainLI">Parks Details</button></h2>
                         <ul class="collapse" id="mainLI">
                             <li>Shade</li>
                             <li>Splash Pad</li>
